v3.4.6 cherry-picked from 1.20.1 - 3